--- a/index.html
+++ b/index.html
@@ -1,85 +1,130 @@
-<!doctype html>
-<!-- The Time Machine GitHub pages theme was designed and developed by Jon Rohan, on Feb 7, 2012. -->
-<!-- Follow him for fun. http://twitter.com/jonrohan. Tail his code on https://github.com/jonrohan -->
-<html>
+﻿<!DOCTYPE html>
+<html lang="en-US">
+
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-  <link rel="stylesheet" href="stylesheets/stylesheet.css" media="screen">
-  <link rel="stylesheet" href="stylesheets/github-dark.css">
-  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-  <script type="text/javascript" src="javascripts/script.js"></script>
+<title>Afsana: Podcasts of Indian language stories</title>
 
-  <title>Afsana</title>
-  <meta name="description" content="audio stories in Indian languages">
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <meta name="viewport" content="width=device-width,initial-scale=1">
+<link rel="stylesheet" href="./css/w3.css">
+<link rel="stylesheet" href="./css/w3-theme-dark-grey.css">
+<link rel="stylesheet" href="./css/common.css">
+
+<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 
 </head>
 
-<body>
+<body class = "w3-theme-d3">
 
-  <div class="wrapper">
-    <header>
-      <h1 class="title">Afsana</h1>
-    </header>
-    <div id="container">
-      <p class="tagline">audio stories in Indian languages</p>
-      <div id="main" role="main">
-        <div class="download-bar">
-        <div class="inner">
-          <a href="https://github.com/afsanapodcast/afsana/tarball/master" class="download-button tar"><span>Download</span></a>
-          <a href="https://github.com/afsanapodcast/afsana/zipball/master" class="download-button zip"><span>Download</span></a>
-          <a href="https://github.com/afsanapodcast/afsana" class="code">View Afsana on GitHub</a>
-        </div>
-        <span class="blc"></span><span class="trc"></span>
-        </div>
-        <article class="markdown-body">
-          <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<div class = "w3-container">
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
+<p>கதை&nbsp;&nbsp;कहानी&nbsp;&nbsp;ಕಥೆ&nbsp;&nbsp;গল্প&nbsp;&nbsp;కథ&nbsp;&nbsp;गोष्ट&nbsp;&nbsp;काणी&nbsp;&nbsp;કથા&nbsp;&nbsp;कहाणी&nbsp;&nbsp;افسانہ&nbsp;&nbsp;கதை&nbsp;&nbsp;कहानी&nbsp;&nbsp;ಕಥೆ&nbsp;&nbsp;গল্প&nbsp;&nbsp;కథ&nbsp;&nbsp;गोष्ट&nbsp;&nbsp;काणी&nbsp;&nbsp;કથા&nbsp;&nbsp;कहाणी&nbsp;&nbsp;افسانہ&nbsp;&nbsp;</p>
 
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+<header class = "w3-theme-l5 w3-padding border">
+<h1>Afsana Podcasts</h1>
+<h3>Audio stories in Indian languages written and narrated by non-famous Indians</h3>
+</header>
 
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
+<p class = "w3-right-align"><a href = "https://twitter.com/intent/tweet?text=Audio%20stories%20in%20Indian%20languages%20written%20and%20narrated%20by%20non-famous%20Indians%20@afsanaPodcast;url=http%3A%2F%2Fbit.ly%2FleadTW" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Share</a>  <a href = "http://www.twitter.com/afsanaPodcast" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Follow us on Twitter</a></p>
 
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span class="octicon octicon-link"></span></a>Creating pages manually</h3>
+<hr/>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<h3>Latest audiocast</h3>
 
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+<div class="w3-row">
+<div class = "w3-card w3-third doubleborder">
+<div class = "w3-container w3-theme-l5">
+<h4 class = "w3-border-bottom">Ek safar</h4>
+  <p class = "w3-padding"><img src="./images/pk_small.jpg" class="w3-circle border" style = "float:right"/><audio src = "./mp3/pk_safar.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p>
+  <p class="w3-text-grey w3-small">Hindi, 14 Jan 2016</p>
+<h4 class = "w3-border-top">Preran Kumar</h4>
+</div> 
+</div>
+</div>
 
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<hr/>
 
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
+<h3>More audiocasts</h3>
 
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
-        </article>
+<p>Click on an author or language to see a list of audiocasts by that author or in that language.</p>
+
+<h4>Authors</h4>
+
+<div id = "authors" class = "w3-container">
+
+<div class="w3-third">
+<div class="authorcard w3-center w3-round-large">
+<a href = "./html/author_pk.html" title = "Podcasts by Preran Kumar">
+<img src="./images/pk_small.jpg" class="w3-circle" alt="Preran Kumar"/>
+<p class="w3-text-grey">Preran Kumar</p>
+</a>
+</div>
+</div>
+
+</div>
+
+<h4>Languages</h4>
+
+<div id = "languages" class = "w3-container">
+
+<p><a href = "./html/#" class="w3-btn w3-white w3-round-jumbo border">Hindi </a></p>
+
+</div>
+
+<hr/>
+
+<div class = "w3-container">
+
+<p class = "w3-small w3-right-align"><a href = "#ack" class="w3-btn w3-white w3-round-jumbo border">Acknowledgements</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href = "#contact" class="w3-btn w3-white w3-round-jumbo border">Contact</a></p>
+
+<p class = "w3-small">Views expressed in the audiocasts are of their authors, and are not necessarily subscribed to by Afsana Podcast.</p>
+
+<p class = "w3-small"><a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-nd/4.0/88x31.png" /></a> This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/">Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License</a>.</p>
+
+<p class = "w3-small">&copy;2016</p>
+
+</div>
+
+</div>
+
+<div id="ack" class="w3-modal">
+  <div class="w3-modal-dialog">
+    <div class="w3-modal-content w3-card-4">
+      <header class="w3-container w3-theme-l4"> 
+        <a href="#" class="w3-closebtn w3-text-grey">&times;</a>
+        <h5 class = " w3-text-dark-grey">Acknowledgements</h5>
+      </header>
+      <div class="w3-container">        
+		<p class = "w3-text-grey w3-small">All stories are original works of the authors.</p>
+		<p class = "w3-text-grey w3-small">All audiocasts contain prelude music snippets from popular Hindi film songs; these are used under Fair Use policy for non-commercial purposes.</p>
+		<p class = "w3-text-grey w3-small">The website uses css files from <a href = "http://www.w3schools.com/w3css/default.asp">http://www.w3schools.com/w3css/default.asp</a>. These files are free to use and no license attribution is required; however, it is only fair that the source be acknowledged.</p>
       </div>
+      <footer class="w3-container w3-theme-l4">
+        <p>&nbsp;</p>
+      </footer>
     </div>
-    <footer>
-      <div class="owner">
-      <p><a href="https://github.com/afsanapodcast" class="avatar"><img src="https://avatars1.githubusercontent.com/u/16544178?v=3&amp;s=60" width="48" height="48"></a> <a href="https://github.com/afsanapodcast">afsanapodcast</a> maintains <a href="https://github.com/afsanapodcast/afsana">Afsana</a></p>
-
-
-      </div>
-      <div class="creds">
-        <small>This page generated using <a href="https://pages.github.com/">GitHub Pages</a><br>theme by <a href="https://twitter.com/jonrohan/">Jon Rohan</a></small>
-      </div>
-    </footer>
   </div>
-  <div class="current-section">
-    <a href="#top">Scroll to top</a>
-    <a href="https://github.com/afsanapodcast/afsana/tarball/master" class="tar">tar</a><a href="https://github.com/afsanapodcast/afsana/zipball/master" class="zip">zip</a><a href="" class="code">source code</a>
-    <p class="name"></p>
-  </div>
+</div>
 
-  
+<div id="contact" class="w3-modal">
+  <div class="w3-modal-dialog">
+    <div class="w3-modal-content w3-card-4">
+      <header class="w3-container w3-theme-l4"> 
+        <a href="#" class="w3-closebtn w3-text-grey">&times;</a>
+        <h5 class = " w3-text-dark-grey">Contact</h5>
+      </header>
+      <div class="w3-container">        
+		<p class = "w3-text-grey w3-small">Drop a mail to afsana.podcast@gmail.com.</p>
+      </div>
+      <footer class="w3-container w3-theme-l4">
+        <p>&nbsp;</p>
+      </footer>
+    </div>
+  </div>
+</div>
+
 </body>
+
 </html>
