--- a/html/language_hindi.html
+++ b/html/language_hindi.html
@@ -3,7 +3,7 @@
 
 <head>
 
-<title>Afsana author page: Preran Kumar</title>
+<title>Afsana language page: Hindi podcasts</title>
 
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -30,15 +30,13 @@ $(function(){
 
 <div id = "header"></div>
 
-<header class = "w3-theme-l5 w3-padding border"><h1>Preran Kumar</h1></header>
+<header class = "w3-theme-l5 w3-padding border"><h1>Hindi stories</h1></header>
 
 <p class = "w3-right-align">
 <a href = "../index.html" class = "w3-btn w3-round-jumbo w3-white border">Home</a> 
-<a href = "https://twitter.com/intent/tweet?text=Audio%20stories%20by%20Preran%20Kumar%20@afsanaPodcast;url=http%3A%2F%2Fbit.ly%2F1Pj7pAU" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Share</a>  
+<a href = "https://twitter.com/intent/tweet?text=Audio%20stories%20in%20Hindi%20@afsanaPodcast;url=http%3A%2F%2Fbit.ly%2F1ZfCccD" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Share</a>  
 <a href = "http://www.twitter.com/afsanaPodcast" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Follow us on Twitter</a>
 </p>
-
-<p><img src="../images/pk.jpg" class="w3-circle border"/>Preran Kumar lives in Toronto, the largest city of Canada. Besides writing, he likes to cook. He is extremely fond of Hindi films and counts himself among the foremost fans of Rekha and Amitabh Bachchan. He does not consider a day to be complete without a Lata Mangeshkar, and he cannot sleep without reading a book. His days start with Mirabai's bhajans and often end with Jagjit Singh's ghazals. He hopes you'll like his stories.</p>
 
 <hr/>
 
