--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
 <body class = "w3-theme-d3">
 
 <div class = "w3-container">
-
+<div class = "w3-container">
 <p>கதை&nbsp;&nbsp;कहानी&nbsp;&nbsp;ಕಥೆ&nbsp;&nbsp;গল্প&nbsp;&nbsp;కథ&nbsp;&nbsp;गोष्ट&nbsp;&nbsp;काणी&nbsp;&nbsp;કથા&nbsp;&nbsp;कहाणी&nbsp;&nbsp;افسانہ&nbsp;&nbsp;கதை&nbsp;&nbsp;कहानी&nbsp;&nbsp;ಕಥೆ&nbsp;&nbsp;গল্প&nbsp;&nbsp;కథ&nbsp;&nbsp;गोष्ट&nbsp;&nbsp;काणी&nbsp;&nbsp;કથા&nbsp;&nbsp;कहाणी&nbsp;&nbsp;افسانہ&nbsp;&nbsp;</p>
-
+</div>
 <header class = "w3-theme-l5 w3-padding border">
 <h1>Afsana Podcasts</h1>
 <h3>Audio stories in Indian languages written and narrated by non-famous Indians</h3>
 </header>
 
-<p class = "w3-right-align"><a href = "https://twitter.com/intent/tweet?text=Audio%20stories%20in%20Indian%20languages%20written%20and%20narrated%20by%20non-famous%20Indians%20@afsanaPodcast;url=http%3A%2F%2Fbit.ly%2FleadTW" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Share</a>  <a href = "http://www.twitter.com/afsanaPodcast" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Follow us on Twitter</a></p>
+<p class = "w3-right-align"><a href = "https://twitter.com/intent/tweet?text=Audio%20stories%20in%20Indian%20languages%20written%20and%20narrated%20by%20non-famous%20Indians%20@afsanaPodcast;url=http%3A%2F%2Fbit.ly%2F1Og8ppA" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Share</a>  <a href = "http://www.twitter.com/afsanaPodcast" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Follow us on Twitter</a></p>
 
 <hr/>
 
@@ -78,10 +78,6 @@
 <div class = "w3-container">
 
 <p class = "w3-small w3-right-align"><a href = "#ack" class="w3-btn w3-white w3-round-jumbo border">Acknowledgements</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href = "#contact" class="w3-btn w3-white w3-round-jumbo border">Contact</a></p>
-
-<p class = "w3-small">Views expressed in the audiocasts are of their authors, and are not necessarily subscribed to by Afsana Podcast.</p>
-
-<p class = "w3-small"><a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-nd/4.0/88x31.png" /></a> This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/">Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License</a>.</p>
 
 <p class = "w3-small">&copy;2016</p>
 
