broken link correction

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
 <div id = "languages" class = "w3-container">
 
-<p><a href = "./html/#" class="w3-btn w3-white w3-round-jumbo border">Hindi </a></p>
+<p><a href = "./html/language_hindi.html" class="w3-btn w3-white w3-round-jumbo border">Hindi </a></p>
 
 </div>
 
