--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
 <p class = "w3-right-align"><span class = "newtag">Next audiocast: <span class = "w3-tag w3-white w3-small">19 Jan 2016</span><br/>Hindi story by Ruchi Rana</span></p>
 <hr/>
 
+<a name = "more"></a>
 <h3>More audiocasts</h3>
 
 <p>Click on an author or language to see a list of audiocasts by that author or in that language.</p>
@@ -56,9 +57,9 @@
 
 <div class="w3-third">
 <div class="authorcard w3-center w3-round-large">
-<a href = "./html/author_pk.html" title = "Podcasts by Preran Kumar">
-<img src="./images/pk_small.jpg" class="w3-circle" alt="Preran Kumar"/>
-<p class="w3-text-grey">Preran Kumar</p>
+<a href = "./html/author_pk.html" title = "Podcasts by Preran Kumar" class = "anoline">
+<img src="./images/pk_small.jpg" class="w3-circle borderwhite" alt="Preran Kumar"/>
+<p class="w3-text-white">Preran Kumar</p>
 </a>
 </div>
 </div>
