--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <div class = "w3-container">
 <div class = "w3-container">
-<p>கதை&nbsp;&nbsp;कहानी&nbsp;&nbsp;ಕಥೆ&nbsp;&nbsp;গল্প&nbsp;&nbsp;కథ&nbsp;&nbsp;गोष्ट&nbsp;&nbsp;काणी&nbsp;&nbsp;કથા&nbsp;&nbsp;कहाणी&nbsp;&nbsp;افسانہ&nbsp;&nbsp;கதை&nbsp;&nbsp;कहानी&nbsp;&nbsp;ಕಥೆ&nbsp;&nbsp;গল্প&nbsp;&nbsp;కథ&nbsp;&nbsp;गोष्ट&nbsp;&nbsp;काणी&nbsp;&nbsp;કથા&nbsp;&nbsp;कहाणी&nbsp;&nbsp;افسانہ&nbsp;&nbsp;</p>
+<p>கதை&nbsp;&nbsp;कहानी&nbsp;&nbsp;ಕಥೆ&nbsp;&nbsp;গল্প&nbsp;&nbsp;కథ&nbsp;&nbsp;गोष्ट&nbsp;&nbsp;काणी&nbsp;&nbsp;કથા&nbsp;&nbsp;कहाणी&nbsp;&nbsp;افسانہ&nbsp;&nbsp;</p>
 </div>
 <header class = "w3-theme-l5 w3-padding border">
 <h1>Afsana Podcasts</h1>
@@ -38,7 +38,7 @@
 <div class = "w3-container w3-theme-l5">
 <h4 class = "w3-border-bottom">Ek safar</h4>
   <p class = "w3-padding"><img src="./images/pk_small.jpg" class="w3-circle border" style = "float:right"/><audio src = "./mp3/pk_safar.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p>
-  <p class="w3-text-grey w3-small">Hindi, 14 Jan 2016</p>
+  <p class="w3-text-grey w3-small">Hindi, 15 Jan 2016</p>
 <h4 class = "w3-border-top">Preran Kumar</h4>
 </div> 
 </div>
