styling changes for subsidiary pages

--- a/html/author_pk.html
+++ b/html/author_pk.html
@@ -40,17 +40,17 @@ $(function(){
 
 <p><img src="../images/pk.jpg" class="w3-circle border"/>Preran Kumar lives in Toronto, the largest city of Canada. Besides writing, he likes to cook. He is extremely fond of Hindi films and counts himself among the foremost fans of Rekha and Amitabh Bachchan. He does not consider a day to be complete without a Lata Mangeshkar, and he cannot sleep without reading a book. His days start with Mirabai's bhajans and often end with Jagjit Singh's ghazals. He hopes you'll like his stories.</p>
 
-<hr/>
-
-<div class="w3-row">
-<div class = "w3-card w3-third doubleborder">
-<div class = "w3-container w3-theme-l5">
-<h4 class = "w3-border-bottom">Ek safar</h4>
-  <p class = "w3-padding"><audio src = "../mp3/pk_safar.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p>
-  <p class="w3-text-grey w3-small">Hindi, 15 Jan 2016</p>
-<h4 class = "w3-border-top">Preran Kumar</h4>
-</div> 
-</div>
+<div class="w3-responsive">
+<table class="w3-table w3-bordered">
+<tr>
+  <td><p>&nbsp;</p></td>
+  <td><p>&nbsp;</p></td>
+</tr>
+<tr>
+  <td><p>Ek safar (Hindi)</p></td>
+  <td><p><audio src = "../mp3/pk_safar.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p></td>
+</tr>
+</table>
 </div>
 
 </div>
