--- a/html/language_hindi.html
+++ b/html/language_hindi.html
@@ -38,17 +38,17 @@ $(function(){
 <a href = "http://www.twitter.com/afsanaPodcast" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Follow us on Twitter</a>
 </p>
 
-<hr/>
-
-<div class="w3-row">
-<div class = "w3-card w3-third doubleborder">
-<div class = "w3-container w3-theme-l5">
-<h4 class = "w3-border-bottom">Ek safar</h4>
-  <p class = "w3-padding"><audio src = "../mp3/pk_safar.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p>
-  <p class="w3-text-grey w3-small">Hindi, 14 Jan 2016</p>
-<h4 class = "w3-border-top">Preran Kumar</h4>
-</div> 
-</div>
+<div class="w3-responsive">
+<table class="w3-table w3-bordered">
+<tr>
+  <td><p>&nbsp;</p></td>
+  <td><p>&nbsp;</p></td>
+</tr>
+<tr>
+  <td><p>Ek safar (Preran Kumar)</p></td>
+  <td><p><audio src = "../mp3/pk_safar.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p></td>
+</tr>
+</table>
 </div>
 
 </div>
