--- a/html/author_rr.html
+++ b/html/author_rr.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en-US">
 
 <head>
@@ -47,8 +47,8 @@ $(function(){
   <td><p>&nbsp;</p></td>
 </tr>
 <tr>
-  <td><p>... (Hindi)</p></td>
-  <td><p><audio src = "../#" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p></td>
+  <td><p>Shukriya aye darakht (Hindi)</p></td>
+  <td><p><audio src = "../mp3/rr_darakht.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p></td>
 </tr>
 </table>
 </div>
