--- a/html/language_hindi.html
+++ b/html/language_hindi.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en-US">
 
 <head>
@@ -47,6 +47,10 @@ $(function(){
 <tr>
   <td><p>Ek safar (Preran Kumar)</p></td>
   <td><p><audio src = "../mp3/pk_safar.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p></td>
+</tr>
+<tr>
+  <td><p>Shukriya aye darakht (Ruchi Rana)</p></td>
+  <td><p><audio src = "../mp3/rr_darakht.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p></td>
 </tr>
 </table>
 </div>
