adding the Darakht story

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en-US">
 
 <head>
@@ -36,20 +36,20 @@
 <div class="w3-row">
 <div class = "w3-card w3-third doubleborder">
 <div class = "w3-container w3-theme-l5">
-<h4 class = "w3-border-bottom">Ek safar</h4>
-  <p class = "w3-padding"><img src="./images/pk_small.jpg" class="w3-circle border" style = "float:right"/><audio src = "./mp3/pk_safar.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p>
-  <p class="w3-text-grey w3-small">Hindi, 15 Jan 2016</p>
-<h4 class = "w3-border-top">Preran Kumar</h4>
+<h4 class = "w3-border-bottom">Shukriya aye darakht</h4>
+  <p class = "w3-padding"><img src="./images/rr_small.jpg" class="w3-circle border" style = "float:right"/><audio src = "./mp3/rr_darakht.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p>
+  <p class="w3-text-grey w3-small">Hindi, 21 Jan 2016</p>
+<h4 class = "w3-border-top">Ruchi Rana</h4>
 </div> 
 </div>
 </div>
-<p class = "w3-right-align"><span class = "newtag">Next audiocast: <span class = "w3-tag w3-white w3-small">21 Jan 2016</span><br/>Hindi story by Ruchi Rana</span></p>
+<p class = "w3-right-align"><span class = "newtag">Next audiocast: <span class = "w3-tag w3-white w3-small">28 Jan 2016</span><br/>Hindi story by Anindita Basu</span></p>
 <hr/>
 
 <a name = "more"></a>
 <h3>More audiocasts</h3>
 
-<p>Click on an author or language to see a list of audiocasts by that author or in that language.</p>
+<p class = "w3-small">Click on an author or language to see a list of audiocasts by that author or in that language.</p>
 
 <h4>Authors</h4>
 
@@ -60,6 +60,15 @@
 <a href = "./html/author_pk.html" title = "Podcasts by Preran Kumar" class = "anoline">
 <img src="./images/pk_small.jpg" class="w3-circle borderwhite" alt="Preran Kumar"/>
 <p class="w3-text-white">Preran Kumar</p>
+</a>
+</div>
+</div>
+
+<div class="w3-third">
+<div class="authorcard w3-center w3-round-large">
+<a href = "./html/author_rr.html" title = "Podcasts by Ruchi Rana" class = "anoline">
+<img src="./images/rr_small.jpg" class="w3-circle borderwhite" alt="Ruchi Rana"/>
+<p class="w3-text-white">Ruchi Rana</p>
 </a>
 </div>
 </div>
