--- a/html/author_ab.html
+++ b/html/author_ab.html
@@ -34,7 +34,7 @@ $(function(){
 
 <p class = "w3-right-align">
 <a href = "../index.html" class = "w3-btn w3-round-jumbo w3-white border">Home</a> 
-<a href = "https://twitter.com/intent/tweet?text=Audio%20stories%20by%20Preran%20Kumar%20@afsanaPodcast;url=http%3A%2F%2Fbit.ly%2F1Pj7pAU" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Share</a>  
+<a href = "https://twitter.com/intent/tweet?text=Audio%20stories%20by%20Anindita%20Basu%20@afsanaPodcast;url=http%3A%2F%2Fbit.ly%2F1Tfv4bl" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Share</a>  
 <a href = "http://www.twitter.com/afsanaPodcast" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Follow us on Twitter</a>
 </p>
 
@@ -48,7 +48,7 @@ $(function(){
 </tr>
 <tr>
   <td><p>Tulsi ka ped (Hindi)</p></td>
-  <td><p><audio src = "../mp3/#.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p></td>
+  <td><p><audio src = "../mp3/ab_tulsi.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p></td>
 </tr>
 </table>
 </div>
