--- a/html/author_ab.html
+++ b/html/author_ab.html
@@ -38,7 +38,7 @@ $(function(){
 <a href = "http://www.twitter.com/afsanaPodcast" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Follow us on Twitter</a>
 </p>
 
-<p><img src="../images/ab.PNG" class="w3-circle border"/>Anindita Basu likes words, languages, and stories; she dislikes whippersnappers, bluster, and sweets.</p>
+<p><img src="../images/ab.PNG" class="w3-circle border"/>Anindita Basu likes words, languages, and stories; she dislikes whataboutery, laziness, and sweets.</p>
 
 <div class="w3-responsive">
 <table class="w3-table w3-bordered">
