--- a/html/footer.html
+++ b/html/footer.html
@@ -36,7 +36,7 @@
         <h5 class = " w3-text-dark-grey">Acknowledgements</h5>
       </header>
       <div class="w3-container">        
-		<p class = "w3-text-grey w3-small">All stories are original works of the authors.</p>
+		<p class = "w3-text-grey w3-small">All stories are original works of the authors. The copyright thereof vests with them.</p>
 		<p class = "w3-text-grey w3-small">The website uses css files from <a href = "http://www.w3schools.com/w3css/default.asp">http://www.w3schools.com/w3css/default.asp</a>. These files are free to use and no license attribution is required; however, it is only fair that the source be acknowledged.</p>
       </div>
       <footer class="w3-container w3-theme-l4">
