--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 
-<title>Afsana: Podcasts of Indian language stories</title>
+<title>Afsana: Podcasts of Indian language stories (Hindi, Bengali, Marathi, Kannada, more...</title>
 
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -37,13 +37,13 @@
 <div class = "w3-card w3-third doubleborder">
 <div class = "w3-container w3-theme-l5">
 <h4 class = "w3-border-bottom">Tulsi ka ped</h4>
-  <p class = "w3-padding"><img src="./images/ab_small.PNG" class="w3-circle border" style = "float:right"/><audio src = "./mp3/ab_tulsi.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p>
-  <p class="w3-text-grey w3-small">Hindi, 28 Jan 2016</p>
-<h4 class = "w3-border-top">Anindita Basu</h4>
+  <p class = "w3-padding"><img src="./images/ss_small.jpg" class="w3-circle border" style = "float:right"/><audio src = "./mp3/ss_punarjanm.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p>
+  <p class="w3-text-grey w3-small">Hindi, 4 Feb 2016</p>
+<h4 class = "w3-border-top">Shishir Somvanshi</h4>
 </div> 
 </div>
 </div>
-<p class = "w3-right-align"><span class = "newtag">Next audiocast: <span class = "w3-tag w3-white w3-small">Hindi story by Shishir Somvanshi</span><br/><span class = "w3-tiny">We're out of town on a medical emergency; we'll post Shishir's audiocast as soon as we are back.</span></span></p>
+<!--<p class = "w3-right-align"><span class = "newtag">Next audiocast: <span class = "w3-tag w3-white w3-small">Hindi story by Shishir Somvanshi</span><br/><span class = "w3-tiny">We're out of town on a medical emergency; we'll post Shishir's audiocast as soon as we are back.</span></span></p>-->
 <hr/>
 
 <a name = "more"></a>
@@ -73,6 +73,13 @@
 <a href = "./html/author_ab.html" title = "Podcasts by Anindita Basu" class = "anoline">
 <img src="./images/ab_small.PNG" class="w3-circle borderwhite" alt="Anindita Basu"/>
 <p class="w3-text-white">Anindita Basu</p>
+</a>
+</div>
+
+<div class="authorcard w3-center w3-round-large">
+<a href = "./html/author_ss.html" title = "Podcasts by Shishir Somvanshi" class = "anoline">
+<img src="./images/ss_small.jpg" class="w3-circle borderwhite" alt="Shishir Somvanshi"/>
+<p class="w3-text-white">Shishir Somvanshi</p>
 </a>
 </div>
 
