--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <div class="w3-row">
 <div class = "w3-card w3-third doubleborder">
 <div class = "w3-container w3-theme-l5">
-<h4 class = "w3-border-bottom">Tulsi ka ped</h4>
+<h4 class = "w3-border-bottom">Punarjanm</h4>
   <p class = "w3-padding"><img src="./images/ss_small.jpg" class="w3-circle border" style = "float:right"/><audio src = "./mp3/ss_punarjanm.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p>
   <p class="w3-text-grey w3-small">Hindi, 4 Feb 2016</p>
 <h4 class = "w3-border-top">Shishir Somvanshi</h4>
