--- a/html/language_hindi.html
+++ b/html/language_hindi.html
@@ -56,6 +56,10 @@ $(function(){
   <td><p>Tulsi ka ped (Anindita Basu)</p></td>
   <td><p><audio src = "../mp3/ab_tulsi.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p></td>
 </tr>
+<tr>
+  <td><p>Punarjanm (Shishir Somvanshi)</p></td>
+  <td><p><audio src = "../mp3/ss_punarjanm.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p></td>
+</tr>
 </table>
 </div>
 
