--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 
-<title>Afsana: Podcasts of Indian language stories (Hindi, Bengali, Marathi, Kannada, more...</title>
+<title>Afsana: Podcasts of Indian language stories (Hindi, Bengali, Marathi, Kannada, more...)</title>
 
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -57,29 +57,29 @@
 
 <div class="authorcard w3-center w3-round-large">
 <a href = "./html/author_pk.html" title = "Podcasts by Preran Kumar" class = "anoline">
-<img src="./images/pk_small.jpg" class="w3-circle borderwhite" alt="Preran Kumar"/>
 <p class="w3-text-white">Preran Kumar</p>
+<img src="./images/pk_small.jpg" class="w3-circle borderwhite" alt="Preran Kumar"/>
 </a>
 </div>
 
 <div class="authorcard w3-center w3-round-large">
 <a href = "./html/author_rr.html" title = "Podcasts by Ruchi Rana" class = "anoline">
-<img src="./images/rr_small.jpg" class="w3-circle borderwhite" alt="Ruchi Rana"/>
 <p class="w3-text-white">Ruchi Rana</p>
+<img src="./images/rr_small.jpg" class="w3-circle borderwhite" alt="Ruchi Rana"/>
 </a>
 </div>
 
 <div class="authorcard w3-center w3-round-large">
 <a href = "./html/author_ab.html" title = "Podcasts by Anindita Basu" class = "anoline">
-<img src="./images/ab_small.PNG" class="w3-circle borderwhite" alt="Anindita Basu"/>
 <p class="w3-text-white">Anindita Basu</p>
+<img src="./images/ab_small.PNG" class="w3-circle borderwhite" alt="Anindita Basu"/>
 </a>
 </div>
 
 <div class="authorcard w3-center w3-round-large">
 <a href = "./html/author_ss.html" title = "Podcasts by Shishir Somvanshi" class = "anoline">
-<img src="./images/ss_small.jpg" class="w3-circle borderwhite" alt="Shishir Somvanshi"/>
 <p class="w3-text-white">Shishir Somvanshi</p>
+<img src="./images/ss_small.jpg" class="w3-circle borderwhite" alt="Shishir Somvanshi"/>
 </a>
 </div>
 
