--- a/html/author_rr.html
+++ b/html/author_rr.html
@@ -50,6 +50,10 @@ $(function(){
   <td><p>Shukriya aye darakht (Hindi)</p></td>
   <td><p><audio src = "../mp3/rr_darakht.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p></td>
 </tr>
+<tr>
+  <td><p>Kaghaz ki khwahishen (Hindi)</p></td>
+  <td><p><audio src = "../mp3/rr_aas.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p></td>
+</tr>
 </table>
 </div>
 
