--- a/html/author_rr.html
+++ b/html/author_rr.html
@@ -34,7 +34,7 @@ $(function(){
 
 <p class = "w3-right-align">
 <a href = "../index.html" class = "w3-btn w3-round-jumbo w3-white border">Home</a> 
-<a href = "https://twitter.com/intent/tweet?text=Audio%20stories%20by%20Ruchi%20Rana%20@afsanaPodcast;url=http%3A%2F%2Fbit.ly%2F1RCjTs0" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Share</a>  
+<a href = "https://twitter.com/intent/tweet?text=Audio%20stories%20by%20@RuShiVi%20at%20@afsanaPodcast;url=http%3A%2F%2Fbit.ly%2F1RCjTs0" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Share</a>  
 <a href = "http://www.twitter.com/afsanaPodcast" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Follow us on Twitter</a>
 </p>
 
