--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 
-<title>Afsana: Podcasts of Indian language stories (Hindi, Bengali, Marathi, Kannada, more...)</title>
+<title>Afsana: Podcasts of Indian language stories (audio stories in Hindi, Bengali, Marathi, Kannada, and more ...)</title>
 
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -36,10 +36,10 @@
 <div class="w3-row">
 <div class = "w3-card w3-third doubleborder">
 <div class = "w3-container w3-theme-l5">
-<h4 class = "w3-border-bottom">Kaghaz ki khwahishein</h4>
-  <p class = "w3-padding"><img src="./images/rr_small.jpg" class="w3-circle border" style = "float:right"/><audio src = "./mp3/rr_aas.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p>
-  <p class="w3-text-grey w3-small">Hindi, 11 Feb 2016</p>
-<h4 class = "w3-border-top">Ruchi Rana</h4>
+<h4 class = "w3-border-bottom">Rachna</h4>
+  <p class = "w3-padding"><img src="./images/rs_small.jpg" class="w3-circle border" style = "float:right"/><audio src = "./mp3/rs_rachna.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p>
+  <p class="w3-text-grey w3-small">Hindi, 18 Feb 2016</p>
+<h4 class = "w3-border-top">Rahul Shabd</h4>
 </div> 
 </div>
 </div>
@@ -80,6 +80,13 @@
 <a href = "./html/author_ss.html" title = "Podcasts by Shishir Somvanshi" class = "anoline">
 <p class="w3-text-white">Shishir Somvanshi</p>
 <img src="./images/ss_small.jpg" class="w3-circle borderwhite" alt="Shishir Somvanshi"/>
+</a>
+</div>
+
+<div class="authorcard w3-center w3-round-large">
+<a href = "./html/author_rs.html" title = "Podcasts by Rahul Shabd" class = "anoline">
+<p class="w3-text-white">Rahul Shabd</p>
+<img src="./images/rs_small.jpg" class="w3-circle borderwhite" alt="Rahul Shabd"/>
 </a>
 </div>
 
