--- a/html/language_hindi.html
+++ b/html/language_hindi.html
@@ -64,6 +64,10 @@ $(function(){
   <td><p>Kaghaz ki khwahishein (Ruchi Rana)</p></td>
   <td><p><audio src = "../mp3/rr_aas.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p></td>
 </tr>
+<tr>
+  <td><p>Rachna (Rahul Shabd)</p></td>
+  <td><p><audio src = "../mp3/rs_rachna.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p></td>
+</tr>
 </table>
 </div>
 
