--- a/html/author_rs.html
+++ b/html/author_rs.html
@@ -38,7 +38,7 @@ $(function(){
 <a href = "http://www.twitter.com/afsanaPodcast" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Follow us on Twitter</a>
 </p>
 
-<p><img src="../images/rs.jpg" class="w3-circle border"/>Rahul Shabd is from Gwalior, Madhya pradesh. He likes to write stories and poems. He also likes music, movies, food, and cricket.</p>
+<p><img src="../images/rs.png" class="w3-circle border"/>Rahul Shabd is from Gwalior, Madhya pradesh. He likes to write stories and poems. He also likes music, movies, food, and cricket.</p>
 
 <div class="w3-responsive">
 <table class="w3-table w3-bordered">
