--- a/html/author_ss.html
+++ b/html/author_ss.html
@@ -38,7 +38,7 @@ $(function(){
 <a href = "http://www.twitter.com/afsanaPodcast" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Follow us on Twitter</a>
 </p>
 
-<p><img src="../images/ss.jpg" class="w3-circle border"/>Shishir Somvanshi is a forestry scientist. He writes poems and stories on love and life. His blog is at <a href = "http://www.shishirkikavitayen.blogspot.in/" target = "_blank">http://www.shishirkikavitayen.blogspot.in/</a> and Facebook page at <a href = "http://www.facebook.com/shishirsomvanshiunlimited" target = "_blank">http://www.facebook.com/shishirsomvanshiunlimited</a>.</p>
+<p><img src="../images/ss.png" class="w3-circle border"/>Shishir Somvanshi is a forestry scientist. He writes poems and stories on love and life. His blog is at <a href = "http://www.shishirkikavitayen.blogspot.in/" target = "_blank">http://www.shishirkikavitayen.blogspot.in/</a> and Facebook page at <a href = "http://www.facebook.com/shishirsomvanshiunlimited" target = "_blank">http://www.facebook.com/shishirsomvanshiunlimited</a>.</p>
 
 <div class="w3-responsive">
 <table class="w3-table w3-bordered">
