--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <div class = "w3-card w3-third doubleborder">
 <div class = "w3-container w3-theme-l5">
 <h4 class = "w3-border-bottom">Rachna</h4>
-  <p class = "w3-padding"><img src="./images/rs_small.jpg" class="w3-circle border" style = "float:right"/><audio src = "./mp3/rs_rachna.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p>
+  <p class = "w3-padding"><img src="./images/rs_small.png" class="w3-circle border" style = "float:right"/><audio src = "./mp3/rs_rachna.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p>
   <p class="w3-text-grey w3-small">Hindi, 18 Feb 2016</p>
 <h4 class = "w3-border-top">Rahul Shabd</h4>
 </div> 
@@ -65,7 +65,7 @@
 <div class="authorcard w3-center w3-round-large">
 <a href = "./html/author_rr.html" title = "Podcasts by Ruchi Rana" class = "anoline">
 <p class="w3-text-white">Ruchi Rana</p>
-<img src="./images/rr_small.jpg" class="w3-circle borderwhite" alt="Ruchi Rana"/>
+<img src="./images/rr_small.png" class="w3-circle borderwhite" alt="Ruchi Rana"/>
 </a>
 </div>
 
@@ -79,14 +79,14 @@
 <div class="authorcard w3-center w3-round-large">
 <a href = "./html/author_ss.html" title = "Podcasts by Shishir Somvanshi" class = "anoline">
 <p class="w3-text-white">Shishir Somvanshi</p>
-<img src="./images/ss_small.jpg" class="w3-circle borderwhite" alt="Shishir Somvanshi"/>
+<img src="./images/ss_small.png" class="w3-circle borderwhite" alt="Shishir Somvanshi"/>
 </a>
 </div>
 
 <div class="authorcard w3-center w3-round-large">
 <a href = "./html/author_rs.html" title = "Podcasts by Rahul Shabd" class = "anoline">
 <p class="w3-text-white">Rahul Shabd</p>
-<img src="./images/rs_small.jpg" class="w3-circle borderwhite" alt="Rahul Shabd"/>
+<img src="./images/rs_small.png" class="w3-circle borderwhite" alt="Rahul Shabd"/>
 </a>
 </div>
 
