street sounds pages

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <h3>Audio stories in Indian languages written and narrated by non-famous Indians</h3>
 </header>
 
-<p class = "w3-right-align"><a href = "https://twitter.com/intent/tweet?text=Audio%20stories%20in%20Indian%20languages%20written%20and%20narrated%20by%20non-famous%20Indians%20@afsanaPodcast;url=http%3A%2F%2Fbit.ly%2F1Og8ppA" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Share</a>  <a href = "http://www.twitter.com/afsanaPodcast" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Follow us on Twitter</a></p>
+<p class = "w3-right-align"><a href = "https://twitter.com/intent/tweet?text=Audio%20stories%20in%20Indian%20languages%20written%20and%20narrated%20by%20non-famous%20Indians%20@afsanaPodcast;url=http%3A%2F%2Fbit.ly%2F1Og8ppA" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Share</a>  <a href = "http://www.twitter.com/afsanaPodcast" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Follow</a></p>
 
 <hr/>
 
@@ -43,7 +43,13 @@
 </div> 
 </div>
 </div>
-<!--<p class = "w3-right-align"><span class = "newtag">Next audiocast: <span class = "w3-tag w3-white w3-small">Hindi story by Shishir Somvanshi</span><br/><span class = "w3-tiny">We're out of town on a medical emergency; we'll post Shishir's audiocast as soon as we are back.</span></span></p>-->
+
+<div class = "w3-container">
+
+<p class = "w3-right-align"><span class = "w3-tag w3-theme-l5 doubleborder">Quick bytes<br/><span class = "w3-small">Make your own story<br/></span><br/><audio src = "./mp3/anon_sale.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio><br/></span></p>
+
+</div>
+
 <hr/>
 
 <a name = "more"></a>
@@ -51,7 +57,7 @@
 
 <p class = "w3-small">Click on an author or language to see a list of audiocasts by that author or in that language.</p>
 
-<h4>Authors</h4>
+<h4>Author-narrators</h4>
 
 <div id = "authors" class = "w3-container">
 
@@ -72,7 +78,7 @@
 <div class="authorcard w3-center w3-round-large">
 <a href = "./html/author_ab.html" title = "Podcasts by Anindita Basu" class = "anoline">
 <p class="w3-text-white">Anindita Basu</p>
-<img src="./images/ab_small.PNG" class="w3-circle borderwhite" alt="Anindita Basu"/>
+<img src="./images/ab_small.png" class="w3-circle borderwhite" alt="Anindita Basu"/>
 </a>
 </div>
 
@@ -96,7 +102,7 @@
 
 <div id = "languages" class = "w3-container">
 
-<p><a href = "./html/language_hindi.html" class="w3-btn w3-white w3-round-jumbo border">Hindi </a></p>
+<p><a href = "./html/author_anon.html" class="w3-btn w3-white w3-round-jumbo border">Life </a>&nbsp;&nbsp;&nbsp;&nbsp;<a href = "./html/language_hindi.html" class="w3-btn w3-white w3-round-jumbo border">Hindi </a></p>
 
 </div>
 
