--- a/html/author_anon.html
+++ b/html/author_anon.html
@@ -34,11 +34,11 @@ $(function(){
 
 <p class = "w3-right-align">
 <a href = "../index.html" class = "w3-btn w3-round-jumbo w3-white border">Home</a> 
-<a href = "https://twitter.com/intent/tweet?text=Audio%20stories%20by%20@anindita_basu%20at%20@afsanaPodcast;url=http%3A%2F%2Fbit.ly%2F1WACOUt" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Share</a>  
+<a href = "https://twitter.com/intent/tweet?text=Street%20sounds%20tell%20a%20thousand%20stories%20at%20@afsanaPodcast;url=http%3A%2F%2Fbit.ly%2F1WACOUt" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Share</a>  
 <a href = "http://www.twitter.com/afsanaPodcast" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Follow</a>
 </p>
 
-<p><img src="../images/anon.PNG" class="w3-circle border"/>Life, as we hear it around us.</p>
+<p><img src="../images/anon.PNG" class="w3-circle border"/>Life, as we hear it around us, telling us stories.</p>
 
 <div class="w3-responsive">
 <table class="w3-table w3-bordered">
