minor text edit

--- a/html/author_ab.html
+++ b/html/author_ab.html
@@ -35,7 +35,7 @@ $(function(){
 <p class = "w3-right-align">
 <a href = "../index.html" class = "w3-btn w3-round-jumbo w3-white border">Home</a> 
 <a href = "https://twitter.com/intent/tweet?text=Audio%20stories%20by%20@anindita_basu%20at%20@afsanaPodcast;url=http%3A%2F%2Fbit.ly%2F1Tfv4bl" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Share</a>  
-<a href = "http://www.twitter.com/afsanaPodcast" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Follow us on Twitter</a>
+<a href = "http://www.twitter.com/afsanaPodcast" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Follow</a>
 </p>
 
 <p><img src="../images/ab.PNG" class="w3-circle border"/>Anindita Basu likes words, languages, and stories; she dislikes whataboutery, laziness, and sweets.</p>
