--- a/html/author_sr.html
+++ b/html/author_sr.html
@@ -35,10 +35,10 @@ $(function(){
 <p class = "w3-right-align">
 <a href = "../index.html" class = "w3-btn w3-round-jumbo w3-white border">Home</a> 
 <a href = "https://twitter.com/intent/tweet?text=Audio%20stories%20by%20@saanjh_savere%20at%20@afsanaPodcast;url=http%3A%2F%2Fbit.ly%2F1oAYUMd" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Share</a>  
-<a href = "http://www.twitter.com/afsanaPodcast" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Follow us on Twitter</a>
+<a href = "http://www.twitter.com/afsanaPodcast" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Follow</a>
 </p>
 
-<p><img src="../images/sr.png" class="w3-circle border"/><!--Shishir Somvanshi is a forestry scientist. He writes poems and stories on love and life. His blog is at <a href = "http://www.shishirkikavitayen.blogspot.in/" target = "_blank">http://www.shishirkikavitayen.blogspot.in/</a> and Facebook page at <a href = "http://www.facebook.com/shishirsomvanshiunlimited" target = "_blank">http://www.facebook.com/shishirsomvanshiunlimited</a>.--></p>
+<p><img src="../images/sr.png" class="w3-circle border"/><!--Sandhya Rathore.--></p>
 
 <div class="w3-responsive">
 <table class="w3-table w3-bordered">
