--- a/html/author_rs.html
+++ b/html/author_rs.html
@@ -35,7 +35,7 @@ $(function(){
 <p class = "w3-right-align">
 <a href = "../index.html" class = "w3-btn w3-round-jumbo w3-white border">Home</a> 
 <a href = "https://twitter.com/intent/tweet?text=Audio%20stories%20by%20@rahulshabd%20at%20@afsanaPodcast%20;url=http%3A%2F%2Fbit.ly%2F1Qf7Dzr" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Share</a>  
-<a href = "http://www.twitter.com/afsanaPodcast" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Follow us on Twitter</a>
+<a href = "http://www.twitter.com/afsanaPodcast" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Follow</a>
 </p>
 
 <p><img src="../images/rs.png" class="w3-circle border"/>Rahul Shabd is from Gwalior, Madhya pradesh. He likes to write stories and poems. He also likes music, movies, food, and cricket.</p>
