broken image link

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 <div class="authorcard w3-center w3-round-large">
 <a href = "./html/author_ab.html" title = "Podcasts by Anindita Basu" class = "anoline">
 <p class="w3-text-white">Anindita Basu</p>
-<img src="./images/ab_small.png" class="w3-circle borderwhite" alt="Anindita Basu"/>
+<img src="./images/ab_small.PNG" class="w3-circle borderwhite" alt="Anindita Basu"/>
 </a>
 </div>
 
