fixing broken link for image

--- a/html/author_anon.html
+++ b/html/author_anon.html
@@ -38,7 +38,7 @@ $(function(){
 <a href = "http://www.twitter.com/afsanaPodcast" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Follow</a>
 </p>
 
-<p><img src="../images/anon.PNG" class="w3-circle border"/>Life, as we hear it around us, telling us stories.</p>
+<p><img src="../images/anon.png" class="w3-circle border"/>Life, as we hear it around us, telling us stories.</p>
 
 <div class="w3-responsive">
 <table class="w3-table w3-bordered">
