--- a/html/instructions.html
+++ b/html/instructions.html
@@ -38,10 +38,25 @@ $(function(){
 <a href = "http://www.twitter.com/afsanaPodcast" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Follow</a>
 </p>
 
+<p>This platform was created with the following two aims:</p>
+
+<ul>
+<li>Encourage ourselves to think and talk in our native tongues</li>
+<li>Cultivate the habit of getting our thoughts across to others in a coherent and conversational manner</li>
+</ul>
+
+<p>Therefore, stories.</p>
+
 <p>If you write stories in any of the languages of the Indian subcontinent, Afsana Podcasts welcomes you to use this platform to read out your stories to its listeners.</p>
 <p> Interested? Read on.</p>
 
-<h3 class = "w3-theme-l5 w3-padding">What you, as an author, must do</h3>
+<ul>
+<li><a href = "#author_howto">What you, as an author, must do</a></li>
+<li><a href = "#post_prod">What we, at Afsana Podcasts, do</a></li>
+<li><a href = "#legal">Legal stuff</a></li>
+</ul>
+
+<h3 class = "w3-theme-l5 w3-padding-tiny" id = "author_howto">What you, as an author, must do</h3>
 
 <ol>
 <li>Pick a story that you have written. Remember these things:
@@ -54,26 +69,26 @@ $(function(){
 </li>
 <li>Use the sound recorder of your phone or computer to narrate the story. Some suggestions:
 <ul>
-<li>Before you start narrating the story, state your name and the name of the story. Do feel free to word this first sentence in any manner that you deem fit. For example, you might decide to emulate radio jockeys who say something like, "आप सभी सुनने वालों को .......... -का नमस्कार। आज मैं आपको सुनाने जा रही हूँ मेरी लिखी कहानी ...... " Or, you might want to word it simply as "कहानी  का शीर्षक: ....... लेखक: ........ "  Or something come completely different. Your wish!</li>
-<li>If, during the recording, you stumble upon a word, just take a deep breath, repeat the sentence, and continue with the recording. We will cut out the "stumbled" part from the sound file.</li>
+<li>Before you start narrating the story, state your name and the name of the story. Do feel free to word this first sentence in any manner that you deem fit. For example, you might decide to emulate radio jockeys who say something like, "आप सभी सुनने वालों को .......... -का नमस्कार। आज मैं आपको सुनाने जा रही हूँ मेरी लिखी कहानी .......... " Or, you might want to word it simply as "कहानी का शीर्षक: .......... लेखक: .......... " Or, something come completely different. Your wish!</li>
+<li>If, during the recording, you stumble upon a word, just take a deep breath, repeat the sentence, and continue with the recording. We can cut out the "stumbled" part from the sound file.</li>
 <li>To minimise echo, try to choose a room that's not empty. The best kind of rooms are bedrooms because cloth absorbs echoes.</li>
 </ul>
 </li>
-<li>Email the sound file to us, at afsana [dot] podcast [at] gmail [dot] com, together with your photo (not too tiny, but a decent-sized one) and a 3-4 line writeup about yourself.</li>
+<li>Email the sound file to us, at afsana [dot] podcast [at] gmail [dot] com, together with your photo (not too tiny. a decent-sized one) and a 3-4 line writeup about yourself. Write this writeup in English.</li>
 </ol>
 
-<h3 class = "w3-theme-l5 w3-padding">What we, at Afsana Podcasts, do</h3>
+<h3 class = "w3-theme-l5 w3-padding-tiny" id = "post_prod">What we, at Afsana Podcasts, do</h3>
 
 <ol>
-<li>We run your story past a language expert, to ensure that the story contains no hate speech or pornography. If it does, we do not proceed further with it. Our decision in this regard is final.</li>
-<li>We edit your sound file to eliminate the parts where you might have stumbled while narrating the story. We will also try to eliminate background noise and adjust the volume, but because we are not sound professionals, we cannot guarantee a topnotch studio-like quality. We'll do the best that we can.</li>
-<li>We create an author page for you. This page contains your profile info and all of your stories.</li>
-<li>We publish your story on the Afsana Podcasts home page, where it remains for a week. Thereafter, it is replaced by the newest story, but your story still remains on the website and can be accessed through either your author-profile page, or the language page.</li>
+<li>Review the story to ensure it contains no hate speech or pornography. If it does, we do not proceed further with it. Our decision in this regard is final.</li>
+<li>Edit your sound file to eliminate the parts where you might have stumbled while narrating the story. We also try to eliminate background noise and adjust the volume, but because we are not sound professionals, we do not promise a topnotch studio-like quality.</li>
+<li>Create an author page for you. This page contains your profile info and all of your stories.</li>
+<li>Publish your story on the Afsana Podcasts home page, where it remains for a week. Thereafter, it is replaced by the newest story, but your story still remains on the website and can be accessed through either your author-profile page or the native-language page.</li>
 </ol>
 
-<h3 class = "w3-theme-l5 w3-padding">Legal stuff</h3>
+<h3 class = "w3-theme-l5 w3-padding-tiny" id = "legal">Legal stuff</h3>
 
-<p>The copyright of your story rests with you. Afsana Podcast has no claim to it. Afsana Podcast will host the story sound file on its website and tweet about it, but will not make any other use of your story sound file. Afsana Podcast will normally not take down any sound file after it has been published, except to comply with an order of a court of law. It is assumed that you've agreed to these terms when you send across your stuff to us.</p>
+<p>The copyright of a story rests with its author. Afsana Podcast will host the story sound file on its website and tweet about it. Afsana Podcast will normally not take down any sound file after it has been published, except to comply with an order of a court of law. It is assumed that authors agree to these terms when they send across their material to us.</p>
 
 </div>
 
