--- a/html/author_ab.html
+++ b/html/author_ab.html
@@ -50,6 +50,10 @@ $(function(){
   <td><p>Tulsi ka ped (Hindi)</p></td>
   <td><p><audio src = "../mp3/ab_tulsi.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p></td>
 </tr>
+<tr>
+  <td><p>Kallo rani (Hindi)</p></td>
+  <td><p><audio src = "../mp3/ab_kallorani.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p></td>
+</tr>
 </table>
 </div>
 
