--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
 <div class="w3-row">
 <div class = "w3-card w3-third doubleborder">
 <div class = "w3-container w3-theme-l5">
-<h4 class = "w3-border-bottom">Rachna</h4>
-  <p class = "w3-padding"><img src="./images/rs_small.png" class="w3-circle border" style = "float:right"/><audio src = "./mp3/rs_rachna.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p>
-  <p class="w3-text-grey w3-small">Hindi, 18 Feb 2016</p>
-<h4 class = "w3-border-top">Rahul Shabd</h4>
+<h4 class = "w3-border-bottom">Kallo rani</h4>
+  <p class = "w3-padding"><img src="./images/ab_small.PNG" class="w3-circle border" style = "float:right"/><audio src = "./mp3/ab_kallorani.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p>
+  <p class="w3-text-grey w3-small">Hindi, 25 Feb 2016</p>
+<h4 class = "w3-border-top">Anindita Basu</h4>
 </div> 
 </div>
 </div>
