--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <h3>Audio stories in Indian languages written and narrated by non-famous Indians</h3>
 </header>
 
-<p class = "w3-right-align"><a href = "https://twitter.com/intent/tweet?text=Audio%20stories%20in%20Indian%20languages%20written%20and%20narrated%20by%20non-famous%20Indians%20@afsanaPodcast;url=http%3A%2F%2Fbit.ly%2F1Og8ppA" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Share</a>  <a href = "http://www.twitter.com/afsanaPodcast" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Follow</a></p>
+<p class = "w3-right-align"><a href = "https://twitter.com/intent/tweet?text=Audio%20stories%20in%20Indian%20languages%20written%20and%20narrated%20by%20non-famous%20Indians%20@afsanaPodcast;url=http%3A%2F%2Fbit.ly%2F1Og8ppA" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Tweet</a>  <a href = "http://www.twitter.com/afsanaPodcast" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Follow</a></p>
 
 <hr/>
 
