--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 
-<title>Afsana: Podcasts of Indian language stories (audio stories in Hindi, Bengali, Marathi, Kannada, and more ...)</title>
+<title>Afsana: Podcasts of Indian language stories (audio stories in Hindi, Bengali, Marathi, Kannada, and more)</title>
 
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -20,18 +20,18 @@
 
 <div class = "w3-container">
 <div class = "w3-container">
-<p>கதை&nbsp;&nbsp;कहानी&nbsp;&nbsp;ಕಥೆ&nbsp;&nbsp;গল্প&nbsp;&nbsp;కథ&nbsp;&nbsp;गोष्ट&nbsp;&nbsp;काणी&nbsp;&nbsp;કથા&nbsp;&nbsp;कहाणी&nbsp;&nbsp;افسانہ&nbsp;&nbsp;</p>
+<p><img src = "./images/ic_radio_white_18dp_2x.png" /> &nbsp;&nbsp;கதை&nbsp;&nbsp;कहानी&nbsp;&nbsp;ಕಥೆ&nbsp;&nbsp;গল্প&nbsp;&nbsp;కథ&nbsp;&nbsp;गोष्ट&nbsp;&nbsp;काणी&nbsp;&nbsp;કથા&nbsp;&nbsp;कहाणी&nbsp;&nbsp;افسانہ&nbsp;&nbsp;</p>
 </div>
 <header class = "w3-theme-l5 w3-padding border">
-<h1>Afsana Podcasts</h1>
-<h3>Audio stories in Indian languages written and narrated by non-famous Indians</h3>
+<h1>Afsana Podcast</h1>
+<h3>Audio stories in Indian languages</h3>
 </header>
 
 <p class = "w3-right-align"><a href = "https://twitter.com/intent/tweet?text=Audio%20stories%20in%20Indian%20languages%20written%20and%20narrated%20by%20non-famous%20Indians%20@afsanaPodcast;url=http%3A%2F%2Fbit.ly%2F1Og8ppA" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Tweet</a>  <a href = "http://www.twitter.com/afsanaPodcast" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Follow</a></p>
 
 <hr/>
 
-<h3>Latest audiocast</h3>
+<h3>Latest podcast</h3>
 
 <div class="w3-row">
 <div class = "w3-card w3-third doubleborder">
@@ -53,9 +53,9 @@
 <hr/>
 
 <a name = "more"></a>
-<h3>More audiocasts</h3>
+<h3>More podcasts</h3>
 
-<p class = "w3-small">Click on an author or language to see a list of audiocasts by that author or in that language.</p>
+<p class = "w3-small">Click on an author or language to see a list of podcasts by that author or in that language.</p>
 
 <h4>Author-narrators</h4>
 
@@ -128,7 +128,7 @@
       <div class="w3-container">        
 		<p class = "w3-text-grey w3-small">All stories are original works of the authors. The copyright thereof vests with them.</p>
 		<p class = "w3-text-grey w3-small">The website uses css files from <a href = "http://www.w3schools.com/w3css/default.asp">http://www.w3schools.com/w3css/default.asp</a>. These files are free to use and no license attribution is required; however, it is only fair that the source be acknowledged.</p>
-		<p class = "w3-text-grey w3-small">The favicon for the website is from Google's material icons library and is used here under Google's <a href = "https://creativecommons.org/licenses/by/4.0/" target = "_blank">CC-BY license</a>.</p>
+		<p class = "w3-text-grey w3-small">The favicon and logo for the website is from Google's material icons library and is used here under Google's <a href = "https://creativecommons.org/licenses/by/4.0/" target = "_blank">CC-BY license</a>.</p>
       </div>
       <footer class="w3-container w3-theme-l4">
         <p>&nbsp;</p>
