minor text edits

--- a/html/instructions.html
+++ b/html/instructions.html
@@ -30,7 +30,7 @@ $(function(){
 
 <div id = "header"></div>
 
-<header class = "w3-theme-l5 w3-padding border"><h1>How to publish an audio story on Afsana Podcasts</h1></header>
+<header class = "w3-theme-l5 w3-padding border"><h1>How to publish an audio story on Afsana Podcast</h1></header>
 
 <p class = "w3-right-align">
 <a href = "../index.html" class = "w3-btn w3-round-jumbo w3-white border">Home</a> 
@@ -47,12 +47,12 @@ $(function(){
 
 <p>Therefore, stories.</p>
 
-<p>If you write stories in any of the languages of the Indian subcontinent, Afsana Podcasts welcomes you to use this platform to read out your stories to its listeners.</p>
+<p>If you write stories in any of the languages of the Indian subcontinent, Afsana Podcast welcomes you to use this platform to read out your stories to its listeners.</p>
 <p> Interested? Read on.</p>
 
 <ul>
 <li><a href = "#author_howto">What you, as an author, must do</a></li>
-<li><a href = "#post_prod">What we, at Afsana Podcasts, do</a></li>
+<li><a href = "#post_prod">What we, at Afsana Podcast, do</a></li>
 <li><a href = "#legal">Legal stuff</a></li>
 </ul>
 
@@ -69,21 +69,21 @@ $(function(){
 </li>
 <li>Use the sound recorder of your phone or computer to narrate the story. Some suggestions:
 <ul>
-<li>Before you start narrating the story, state your name and the name of the story. Do feel free to word this first sentence in any manner that you deem fit. For example, you might decide to emulate radio jockeys who say something like, "आप सभी सुनने वालों को .......... -का नमस्कार। आज मैं आपको सुनाने जा रही हूँ मेरी लिखी कहानी .......... " Or, you might want to word it simply as "कहानी का शीर्षक: .......... लेखक: .......... " Or, something come completely different. Your wish!</li>
+<li>Before you start narrating the story, state your name and the name of the story. Do feel free to word this first sentence in any manner that you deem fit. For example, you might decide to emulate radio jockeys who say something like, "आप सभी सुनने वालों को .......... -का नमस्कार। आज मैं आपको सुनाने जा रही हूँ मेरी लिखी कहानी .......... " Or, you might want to word it simply as "कहानी का शीर्षक: .......... लेखक: .......... " Or, something completely different. Your wish!</li>
 <li>If, during the recording, you stumble upon a word, just take a deep breath, repeat the sentence, and continue with the recording. We can cut out the "stumbled" part from the sound file.</li>
 <li>To minimise echo, try to choose a room that's not empty. The best kind of rooms are bedrooms because cloth absorbs echoes.</li>
 </ul>
 </li>
-<li>Email the sound file to us, at afsana [dot] podcast [at] gmail [dot] com, together with your photo (not too tiny. a decent-sized one) and a 3-4 line writeup about yourself. Write this writeup in English.</li>
+<li>Email the sound file to us, at afsana.podcast@gmail.com, together with your photo (not too tiny. a decent-sized one) and a 3-4 line writeup (in English) about yourself.</li>
 </ol>
 
-<h3 class = "w3-theme-l5 w3-padding-tiny" id = "post_prod">What we, at Afsana Podcasts, do</h3>
+<h3 class = "w3-theme-l5 w3-padding-tiny" id = "post_prod">What we, at Afsana Podcast, do</h3>
 
 <ol>
 <li>Review the story to ensure it contains no hate speech or pornography. If it does, we do not proceed further with it. Our decision in this regard is final.</li>
 <li>Edit your sound file to eliminate the parts where you might have stumbled while narrating the story. We also try to eliminate background noise and adjust the volume, but because we are not sound professionals, we do not promise a topnotch studio-like quality.</li>
 <li>Create an author page for you. This page contains your profile info and all of your stories.</li>
-<li>Publish your story on the Afsana Podcasts home page, where it remains for a week. Thereafter, it is replaced by the newest story, but your story still remains on the website and can be accessed through either your author-profile page or the native-language page.</li>
+<li>Publish your story on the Afsana Podcast home page, where it remains for a week. Thereafter, it is replaced by the newest story, but your story still remains on the website and can be accessed through either your author-profile page or the native-language page.</li>
 </ol>
 
 <h3 class = "w3-theme-l5 w3-padding-tiny" id = "legal">Legal stuff</h3>
