--- a/html/instructions_quickBytes.html
+++ b/html/instructions_quickBytes.html
@@ -30,7 +30,7 @@ $(function(){
 
 <div id = "header"></div>
 
-<header class = "w3-theme-l5 w3-padding border"><h1>How to publish a Quick Bytes audio clip on Afsana Podcasts</h1></header>
+<header class = "w3-theme-l5 w3-padding border"><h1>How to publish a Quick Bytes audio clip on Afsana Podcast</h1></header>
 
 <p class = "w3-right-align">
 <a href = "../index.html" class = "w3-btn w3-round-jumbo w3-white border">Home</a> 
@@ -38,17 +38,17 @@ $(function(){
 <a href = "http://www.twitter.com/afsanaPodcast" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Follow</a>
 </p>
 
-<p>Afsana Podcasts thinks Life, as it unfolds around us, tells us a thousand stories. Each overhead conversation, every fleeting scenario, indeed the entire tableau of Life, is a story &mdash; a story that can change with each retelling. It's fascinating.</p>
+<p>Afsana Podcast thinks Life, as it unfolds around us, tells us a thousand stories. Each overhead conversation, every fleeting scenario, indeed the entire tableau of Life, is a story &mdash; a story that can change with each retelling. It's fascinating.</p>
 
-<p>Therefore, Quick  Bytes.</p>
+<p>Therefore, <a href = "author_anon.html" title = "Street sounds of India" target = "_blank">Quick  Bytes.</p>
 
-<p>If you have captured a slice of Life on your sound recorder, Afsana Podcasts welcomes you to use this platform to share the slice with its listeners.</p>
+<p>If you have captured a slice of Life on your sound recorder, Afsana Podcast welcomes you to use this platform to share the slice with its listeners.</p>
 
 <p> Interested? Read on.</p>
 
 <ul>
 <li><a href = "#author_howto">What you, as an author, must do</a></li>
-<li><a href = "#post_prod">What we, at Afsana Podcasts, do</a></li>
+<li><a href = "#post_prod">What we, at Afsana Podcast, do</a></li>
 <li><a href = "#legal">Legal stuff</a></li>
 </ul>
 
@@ -56,15 +56,15 @@ $(function(){
 
 <ol>
 <li>Record an interesting slice of everyday life around you. It should be an audio recording only and, ideally, no longer than 1 minute.</li>
-<li>Email the sound file to us, at afsana [dot] podcast [at] gmail [dot] com, together with the date and location where the slice was recorded, and the language that the slice is in.</li>
+<li>Email the sound file to us, at afsana.podcast@gmail.com, together with the date and location where the slice was recorded, and the language that the slice is in.</li>
 </ol>
 
-<h3 class = "w3-theme-l5 w3-padding-tiny" id = "post_prod">What we, at Afsana Podcasts, do</h3>
+<h3 class = "w3-theme-l5 w3-padding-tiny" id = "post_prod">What we, at Afsana Podcast, do</h3>
 
 <ol>
 <li>Review the sound clip to ensure it contains no hate speech or pornography. If it does, we do not proceed further with it. Our decision in this regard is final.</li>
 <li>Edit the sound file to try eliminate background noise and adjust the volume, but because we are not sound professionals, we do not promise a topnotch studio-like quality.</li>
-<li>Publish the sound file as a Quick Byte on the Afsana Podcasts home page, where it remains for a week, usually. Thereafter, it is replaced by the newest Quick Byte. All Quick Bytes still remain on the website, on the Life language page.</li>
+<li>Publish the sound file as a Quick Byte on the Afsana Podcast home page, where it remains for a week, usually. Thereafter, it is replaced by the newest Quick Byte. All Quick Bytes still remain on the website, on the Life language page.</li>
 </ol>
 
 <h3 class = "w3-theme-l5 w3-padding-tiny" id = "legal">Legal stuff</h3>
