--- a/html/header.html
+++ b/html/header.html
@@ -22,6 +22,16 @@
 
 <p><img src = "../images/ic_radio_white_18dp_2x.png" /> &nbsp;&nbsp;Afsana Podcast &nbsp;&nbsp;கதை&nbsp;&nbsp;कहानी&nbsp;&nbsp;ಕಥೆ&nbsp;&nbsp;গল্প&nbsp;&nbsp;కథ&nbsp;&nbsp;गोष्ट&nbsp;&nbsp;काणी&nbsp;&nbsp;કથા&nbsp;&nbsp;कहाणी&nbsp;&nbsp;افسانہ&nbsp;&nbsp;</p>
 
+<div class="w3-row">
+
+<div class = "w3-third">
+<p>
+<a href = "../index.html" class = "w3-btn w3-round-jumbo w3-white border">Home</a>  
+<a href = "http://www.twitter.com/afsanaPodcast" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Follow</a>
+</p>
+</div>
+
+<div class = "w3-twothird">
 <p class = "w3-right w3-dropdown-click">
 <button onclick="myAuthFunction()" class = "w3-btn w3-round-jumbo w3-white border">Authors</button>
 	<span id = "authors" class="w3-dropdown-content w3-card-2" style="width:175px">
@@ -37,6 +47,9 @@
 	  <a href="author_anon.html">Life</a>
     </span>
 </p>
+</div>
+
+</div>
 
 <script>
 function myAuthFunction() {
