--- a/html/header.html
+++ b/html/header.html
@@ -34,7 +34,7 @@
 <div class = "w3-twothird">
 <p class = "w3-right w3-dropdown-click">
 <button onclick="myAuthFunction()" class = "w3-btn w3-round-jumbo w3-white border">Authors</button>
-	<span id = "authors" class="w3-dropdown-content w3-card-2" style="width:175px">
+	<span id = "authors" class="w3-dropdown-content w3-card-2 w3-text-grey" style="width:175px">
       <a href="author_ab.html">Anindita Basu</a>
       <a href="author_pk.html">Preran Kumar</a>
       <a href="author_rr.html">Ruchi Rana</a>
@@ -42,7 +42,7 @@
 	  <a href="author_ss.html">Shishir Somvanshi</a>
     </span>
 &nbsp;&nbsp;<button onclick="myLangFunction()" class = "w3-btn w3-round-jumbo w3-white border">Languages</button>
-	<span id = "languages" class="w3-dropdown-content w3-card-2" style="width:175px">
+	<span id = "languages" class="w3-dropdown-content w3-card-2 w3-text-grey" style="width:175px">
 	  <a href="language_hindi.html">Hindi</a>
 	  <a href="author_anon.html">Life</a>
     </span>
