--- a/html/author_ab.html
+++ b/html/author_ab.html
@@ -37,7 +37,7 @@ $(function(){
 <div class="w3-responsive">
 <table class="w3-table w3-bordered">
 <tr>
-  <td><p><a href = "https://twitter.com/intent/tweet?text=Audio%20stories%20by%20@anindita_basu%20at%20@afsanaPodcast;url=http%3A%2F%2Fbit.ly%2F1Tfv4bl" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Tweet</a></p></td>
+  <td><p class = "w3-small"><a href = "https://twitter.com/intent/tweet?text=Audio%20stories%20by%20@anindita_basu%20at%20@afsanaPodcast;url=http%3A%2F%2Fbit.ly%2F1Tfv4bl" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Tweet</a></p></td>
   <td><p>&nbsp;</p></td>
 </tr>
 <tr>
