--- a/html/author_rs.html
+++ b/html/author_rs.html
@@ -37,7 +37,7 @@ $(function(){
 <div class="w3-responsive">
 <table class="w3-table w3-bordered">
 <tr>
-  <td><p class = "w3-right-align">
+  <td><p class = "w3-small">
 <a href = "https://twitter.com/intent/tweet?text=Audio%20stories%20by%20@rahulshabd%20at%20@afsanaPodcast%20;url=http%3A%2F%2Fbit.ly%2F1Qf7Dzr" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Tweet</a>
 </p></td>
   <td><p>&nbsp;</p></td>
